Fix alignment of route info rows

--- a/src/app/pages/route/route-info/route-info.component.scss
+++ b/src/app/pages/route/route-info/route-info.component.scss
@@ -1,6 +1,11 @@
 .card {
   margin-bottom: 16px;
 }
+
 .label {
   color: #0000008a;
+}
+
+.row {
+  font-weight: 500;
 }
