--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -92,6 +92,14 @@ b {
   text-align: center;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
 .card {
   background: #fff;
   border-radius: 0;
